--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -72,4 +72,6 @@
     <string name="action_launch_camera">Open camera</string>
     <string name="action_last_app">Launch last app</string>
 
+   <string name="wireless_charging_sounds_title">Wireless charging sounds</string>
+
 </resources>
